kanc/src/tests/sample_code/should_succeed/multi_file/no_warnings/stdlib/src/num/nat.k
use super.*;

pub type Nat {
    zero: Nat,
    pos(p: Pos): Nat,
}
